Revert "fix(ai-help): scroll horizontally on overflow"
This reverts commit c7407bdf27d8ed633c9525bc39e716d3ba94b67e.

--- a/client/src/plus/ai-help/index.scss
+++ b/client/src/plus/ai-help/index.scss
@@ -233,7 +233,6 @@
     }
 
     .ai-help-message-content {
-      overflow-x: scroll;
       width: 100%;
 
       p {
